<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_produk">

    <fragment
        android:id="@+id/navigation_produk"
        android:name="com.example.uaspmob.ui.produk.ProdukFragment"
        android:label="@string/title_produk"
        tools:layout="@layout/fragment_produk" />

    <fragment
        android:id="@+id/navigation_transaksi"
        android:name="com.example.uaspmob.ui.transaksi.TransaksiFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_transaksi" />

    <fragment
        android:id="@+id/navigation_laporan"
        android:name="com.example.uaspmob.ui.laporan.LaporanFragment"
        android:label="@string/title_laporan"
        tools:layout="@layout/fragment_laporan" />
</navigation>